test: aprimora testes unitarios e resolve problemas de build na seguranca e catalog