@@ -1,10 +1,12 @@
 package com.erp.core.tenant.controller;
 
 import com.erp.core.tenant.Tenant;
-import com.erp.core.tenant.TenantRepository;
 import com.erp.core.tenant.TenantProvisioningService;
 import com.erp.core.tenant.dto.TenantProvisionRequest;
 import com.erp.core.tenant.dto.TenantResponse;
+import com.erp.core.tenant.dto.TenantUpdateRequest;
+import com.erp.core.tenant.TenantRepository;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -13,86 +15,85 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
-import java.util.Collections;
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.time.LocalDateTime;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 public class AdminTenantControllerTest {
 
     @Mock
-    private TenantProvisioningService service;
+    private TenantProvisioningService tenantProvisioningService;
 
     @Mock
     private TenantRepository tenantRepository;
 
     @InjectMocks
-    private AdminTenantController controller;
+    private AdminTenantController adminTenantController;
+
+    private Tenant tenantMock;
+
+    @BeforeEach
+    void setUp() {
+        tenantMock = new Tenant();
+        tenantMock.setId(UUID.randomUUID());
+        tenantMock.setNomeEmpresa("Tenant Teste");
+        tenantMock.setSchemaName("tenant_123");
+        tenantMock.setSlug("tenant-teste");
+        tenantMock.setStatus("ATIVO");
+        tenantMock.setCriadoEm(LocalDateTime.now());
+    }
 
     @Test
-    void testProvisionTenant() {
+    void shouldListAllTenants() {
+        when(tenantRepository.findAllByOrderByCriadoEmDesc()).thenReturn(List.of(tenantMock));
+
+        ResponseEntity<List<TenantResponse>> response = adminTenantController.listTenants();
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertNotNull(response.getBody());
+        assertEquals(1, response.getBody().size());
+    }
+
+    @Test
+    void shouldProvisionTenant() {
         TenantProvisionRequest req = new TenantProvisionRequest();
-        req.setNomeEmpresa("Empresa");
-        req.setSchemaName("schema");
-        req.setAdminNome("Admin");
-        req.setAdminEmail("admin@a.com");
-        req.setAdminSenha("123");
+        req.setNomeEmpresa("Novo");
+        req.setSchemaName("novo");
 
-        ResponseEntity<String> result = controller.provisionTenant(req);
-        
-        verify(service).startProvisioning(req);
-        assertEquals(HttpStatus.ACCEPTED, result.getStatusCode());
-        assertTrue(result.getBody().contains("schema"));
+        ResponseEntity<String> response = adminTenantController.provisionTenant(req);
+
+        assertEquals(HttpStatus.ACCEPTED, response.getStatusCode());
+        assertNotNull(response.getBody());
     }
 
     @Test
-    void testProvisionTenant_NoSchema() {
-        TenantProvisionRequest req = new TenantProvisionRequest();
-        req.setNomeEmpresa("Empresa");
-        req.setAdminNome("Admin");
-        req.setAdminEmail("admin@a.com");
-        req.setAdminSenha("123");
+    void shouldUpdateTenant() {
+        TenantUpdateRequest req = new TenantUpdateRequest();
+        req.setNomeEmpresa("Novo Nome");
 
-        ResponseEntity<String> result = controller.provisionTenant(req);
-        
-        verify(service).startProvisioning(req);
-        assertEquals(HttpStatus.ACCEPTED, result.getStatusCode());
+        when(tenantRepository.findBySchemaName("tenant_123")).thenReturn(tenantMock);
+        when(tenantRepository.save(any())).thenReturn(tenantMock);
+
+        ResponseEntity<TenantResponse> response = adminTenantController.updateTenant("tenant_123", req);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals("Novo Nome", tenantMock.getNomeEmpresa());
     }
 
     @Test
-    void testListTenants() {
-        Tenant tenant = new Tenant();
-        tenant.setId(UUID.randomUUID());
-        tenant.setNomeEmpresa("Exemplo");
-        tenant.setSchemaName("tenant_exemplo");
-        tenant.setCriadoEm(LocalDateTime.now());
-        
-        List<Tenant> list = Collections.singletonList(tenant);
-        when(tenantRepository.findAllByOrderByCriadoEmDesc()).thenReturn(list);
-        
-        ResponseEntity<List<TenantResponse>> result = controller.listTenants();
-        
-        assertEquals(HttpStatus.OK, result.getStatusCode());
-        assertEquals(1, result.getBody().size());
-        assertEquals("tenant_exemplo", result.getBody().get(0).getSchemaName());
-    }
+    void shouldUpdateStatus() {
+        when(tenantRepository.findBySchemaName("tenant_123")).thenReturn(tenantMock);
+        when(tenantRepository.save(any())).thenReturn(tenantMock);
 
-    @Test
-    void testUpdateStatus() {
-        Map<String, String> payload = Collections.singletonMap("status", "ATIVO");
-        Tenant tenant = new Tenant();
-        when(tenantRepository.findBySchemaName("schema")).thenReturn(tenant);
-        
-        ResponseEntity<String> result = controller.updateStatus("schema", payload);
-        
-        verify(tenantRepository).save(tenant);
-        assertEquals("ATIVO", tenant.getStatus());
-        assertEquals(HttpStatus.OK, result.getStatusCode());
+        ResponseEntity<String> response = adminTenantController.updateStatus("tenant_123", Map.of("status", "BLOQUEADO"));
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals("BLOQUEADO", tenantMock.getStatus());
     }
 }
